--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@reown/appkit": "^1.6.3",
+    "@reown/appkit-adapter-wagmi": "^1.6.3",
+    "@tanstack/react-query": "^5.62.8",
+    "lucide-react": "^0.562.0",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "@reown/appkit": "^1.6.3",
-    "@reown/appkit-adapter-wagmi": "^1.6.3",
-    "wagmi": "^2.12.26",
     "viem": "^2.21.54",
-    "@tanstack/react-query": "^5.62.8"
+    "wagmi": "^2.12.26"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
